fix links cursors, fix check z-index

--- a/app/styles/partials/_check.sass
+++ b/app/styles/partials/_check.sass
@@ -18,7 +18,7 @@
   position: fixed
   width: 100%
   height: 100%
-  z-index: 105
+  z-index: 300
   top: 0
   background-color: $check-background-color
   .kormapp-sidebar-check &
